--- a/package.json
+++ b/package.json
@@ -1,13 +1,26 @@
 {
-  "name": "vue-cli-template-webpack",
-  "version": "1.3.1",
-  "license": "MIT",
-  "description": "A full-featured Webpack setup with hot-reload, lint-on-save, unit testing & css extraction.",
+  "name": "mcoflip2",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "docs": "cd docs && gitbook serve",
-    "docs:deploy": "bash ./deploy-docs.sh"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.4",
+    "@fortawesome/free-solid-svg-icons": "^5.3.1",
+    "@fortawesome/vue-fontawesome": "^0.1.1",
+    "axios": "^0.18.0",
+    "i": "^0.3.6",
+    "npm": "^6.4.1",
+    "vue": "^2.5.17"
   },
   "devDependencies": {
-    "vue-cli": "^2.8.1"
+    "@vue/cli-plugin-babel": "^3.0.3",
+    "@vue/cli-service": "^3.0.3",
+    "bulma": "^0.7.1",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.1",
+    "vue-template-compiler": "^2.5.17"
   }
 }
